# note-flow

./: .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml  noteflow-architecture.html
.github/workflows/: noteflow-cicd.yml
file-service/: Dockerfile  README.md  pyproject.toml
file-service/app/: config.py  dependencies.py  main.py
file-service/app/kafka/: consumer.py  producer.py
file-service/app/models/: file.py
file-service/app/repositories/: file_repository.py
file-service/app/routers/: files.py
file-service/app/schemas/: file.py
file-service/app/services/: file_service.py
file-service/app/storage/: minio.py
infra/ansible/: README.md
infra/ansible/playbooks/: deploy-kafka.yml
infra/cicd/: README.md
infra/cicd/github-runner/: .env.example  docker-compose.yml
infra/gitops/: README.md  root-app.yaml
infra/gitops/argocd/: values.yaml
infra/istio/: README.md
infra/keepalived/: README.md
infra/kubernetes/: README.md  cluster-autoscaler-values.yaml
infra/observability/: README.md
nginx/: nginx.conf
note-service/: Dockerfile  README.md  pyproject.toml
note-service/app/: config.py  dependencies.py  main.py
note-service/app/kafka/: consumer.py
note-service/app/middleware/: rate_limit.py
note-service/app/models/: note.py
note-service/app/repositories/: note_repository.py
note-service/app/routers/: notes.py  search.py  tags.py
note-service/app/schemas/: note.py
note-service/app/services/: note_service.py
user-service/: Dockerfile  README.md  pyproject.toml
user-service/app/: config.py  dependencies.py  main.py
(+71 files in other folders)
