[project]
name = "note-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pymongo>=4.9.0",
    "beanie>=2.1.0",
    "redis>=7.0.0",
    "aiokafka>=0.11.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
